workflow/slack/k8s_resource.yaml
# Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: slack-app        
        image: gcr.io/just-site-344717/slack-app:tag
        ports:
        - containerPort: 8000
---
# Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-app-service
spec:
  type: NodePort  
  selector:
    app: dev
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8000
    protocol: TCP
---
