workflow/slack/ingress.yaml
# Ingress to ensure we access through https

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-lb-address
    networking.gke.io/managed-certificates: google-managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: frontend-redirect-config
spec:
  defaultBackend:
    service:
      name: slack-app-service
      port:
        number: 80
